--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.11.0
 
-async-timeout==5.0.1
+async-timeout==5.0.
 
 attrs==25.4.0
 
@@ -86,6 +86,7 @@ pyasn1==0.6.1
 
 pyasn1_modules==0.4.2
 
+
 pycparser==2.23
 
 PyJWT==2.10.1
@@ -117,6 +118,7 @@ service-identity==24.2.0
 six==1.17.0
 
 sqlparse==0.5.3
+
 
 Twisted==25.5.0
 
