--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ packaging==25.0
 pilkit==3.0
 Pillow==10.4.0
 pluggy==1.6.0
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.18
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
