recommendation module fix

--- a/requirements.txt
+++ b/requirements.txt
@@ -54,5 +54,7 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 whitenoise==6.11.0
-pandas==2.0.0
+setuptools>=70.0.0
+pandas==2.2.2
+numpy>=1.26.0
 scikit-learn==1.2.0
