--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,8 @@ tzdata==2025.2
 urllib3==2.5.0
 whitenoise==6.11.0
 setuptools>=70.0.0
+wheel>=0.43.0
+numpy==1.26.4
 pandas==2.2.2
-numpy>=1.26.0
 scikit-learn==1.2.0
+
